[tool.poetry]
name = "hackerrank"
version = "0.1.0"
description = ""
authors = ["Tim Van Ellemeet <tim.vanellemeet@just-eat.com>"]

[tool.poetry.dependencies]
python = "3.7.11"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
